Add docs, clean up reactive object -adjacent stuff

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,14 +4,14 @@
 	<title>bare web components</title>
 	<link rel="stylesheet" href="/styles/main.css">
 
-	<script type="module" src="/scripts/entry.js"></script>
+	<script type="module" src="/scripts/bundle.js"></script>
 </head>
 <body>
 	<div>Hi there.</div>
 	<div data-vm-target="cool">
 		tubes: {{tubes}}
 		<cool-button vm-click="sayChungus">
+		<div class="texta">texta OG content</div>
 	</div>
-	<cool-button vm-click="sayChungus">
 </body>
 </html>
