Clean up reactive object / watcher testing and add selenium for testing ReactiveVm

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,5 +13,6 @@
 		<cool-button vm-click="sayChungus">
 		<div class="texta">texta OG content</div>
 	</div>
+	<input type="text" name="selenium-test">
 </body>
 </html>
